--- a/MathCore/MathCore.csproj
+++ b/MathCore/MathCore.csproj
@@ -16,6 +16,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <AssemblyVersion>1.0.3</AssemblyVersion>
     <PackageVersion>1.0.3</PackageVersion>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
