--- a/MathCore/MathCore.csproj
+++ b/MathCore/MathCore.csproj
@@ -14,9 +14,10 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <AssemblyVersion>1.0.5</AssemblyVersion>
-    <PackageVersion>1.0.5</PackageVersion>
-    <Version>1.0.5</Version>
+    <AssemblyVersion>1.0.5.1</AssemblyVersion>
+    <PackageVersion>1.0.5.1</PackageVersion>
+    <Version>1.0.5.1</Version>
+    <DocumentationFile>true</DocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
