--- a/MathCore/MathCore.csproj
+++ b/MathCore/MathCore.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <EnablePreviewFeatures>true</EnablePreviewFeatures>
         <Authors>Hukutka</Authors>
         <Description>.NET library for numerical methods</Description>
         <PackageId>Hukutka.MathCore</PackageId>
@@ -14,19 +13,21 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <PackageReadmeFile>readme.md</PackageReadmeFile>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <AssemblyVersion>1.0.8</AssemblyVersion>
-        <PackageVersion>1.0.8</PackageVersion>
-        <Version>1.0.8</Version>
+        <AssemblyVersion>1.0.9</AssemblyVersion>
+        <PackageVersion>1.0.9</PackageVersion>
+        <Version>1.0.9</Version>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <EnablePreviewFeatures>true</EnablePreviewFeatures>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.Runtime.Experimental" Version="6.0.2"/>
-        <Using Include="System.Collections.Immutable"/>
-        <Using Include="System.Diagnostics"/>
-        <Using Include="System.Collections"/>
-        <None Include="readme.md" Pack="true" PackagePath="\"/>
+        <Using Include="System.Collections.Immutable" />
+        <Using Include="System.Diagnostics" />
+        <Using Include="System.Collections" />
+        <Using Include="System.Numerics" />
+        <None Include="readme.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
